--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 						Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
 						amet..", comes from a line in section 1.10.32.
 					</p>
+					<div class="line"></div>
+					<img src="assets/aspas.gif" id="aspas" />
 					<div class="cite">
-						<img src="assets/aspas.gif" id="aspas" />
 						<cite id="ct">
 							"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
 							consectetur, adipisci velit..."
@@ -73,6 +74,7 @@
 							</p>
 						</div>
 					</div>
+					<div class="line"></div>
 				</div>
 				<div id="img">
 					<h1 class="mf">Mapa</h1>
