--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style/style.css" />
+		<link rel="stylesheet" href="/style/style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -16,7 +16,7 @@
 			href="https://fonts.googleapis.com/css2?family=Elsie&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Exercicio 12</title>
+		<title>Exercicio 1</title>
 	</head>
 	<body id="body">
 		<div id="tudo">
@@ -27,14 +27,14 @@
 			Medidas Relativas 
 			em (tamanho atual da fonte), ex (tamnho x da fonte), rem (fonte configurada no bady), vw (tamanho da tela), vh (altura da vw), % (PORCENTAGEM)
 			-->
-			<img id="topo" src="assets/topo_principal.jpg" />
+			<img id="topo" src="/assets/topo_principal.jpg" />
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="home.html">Home</a></li>
 				<li><a href="">Info</a></li>
-				<li><a href="pages/special-events.html">Special Events</a></li>
+				<li><a href="/pages/special-events.html">Special Events</a></li>
 				<li><a href="">DVD</a></li>
 				<li><a href="">Location</a></li>
-				<li><a href="pages/menu.html">Menu</a></li>
+				<li><a href="/pages/menu.html">Menu</a></li>
 				<li><a href="">Review</a></li>
 			</ul>
 			<div id="main">
@@ -55,8 +55,8 @@
 						Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
 						amet..", comes from a line in section 1.10.32.
 					</p>
-					<div class="line"></div>
-					<img src="assets/aspas.gif" id="aspas" />
+					<hr width="50%" size="1" color="#E10B0F" />
+					<img src="/assets/aspas.gif" id="aspas" />
 					<div class="cite">
 						<cite id="ct">
 							"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet,
@@ -72,16 +72,16 @@
 								"Laying out pages with meaningless filler text can be very
 								useful when the focus is meant to be on design, not content."
 							</p>
+							<hr width="50%" size="1" color="#E10B0F" />
 						</div>
 					</div>
-					<div class="line"></div>
 				</div>
 				<div id="img">
 					<h1 class="mf">Mapa</h1>
-					<img src="assets/mapa_como_chegar.gif" id="mapa" />
+					<img src="/assets/mapa_como_chegar.gif" id="mapa" />
 					<h1 class="mf">Fotos</h1>
 					<div class="fotos">
-						<img src="assets/fotos.jpg" class="fotos" />
+						<img src="/assets/fotos.jpg" class="fotos" />
 					</div>
 				</div>
 			</div>
